# factorypulse

./: README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
mock-devices/: Dockerfile  mock_devices.py  requirements.txt
